# atcotify

./: .gitignore  README.md  calculate_hash.py  get_atcoder_contest_url.py  kill_bot.sh  main.py  pyproject.toml  run_bot.sh
.github/: dependabot.yaml
asset/: school_abbreviations.yaml  tsukuba_rank.yaml  tsukuba_student_rank.yaml
cogs/: affiliated_police.py  contest_data.py  contest_result.py  help.py  reminder.py  result.py  threads.py  tsukuba_rank.py  tsukuba_student_rank.py  welcome.py
env/: config.py
