[project]
name = "atcotify"
version = "0.1.0"
description = "Discord bot for AtCoder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=3.4.3",
    "bs4>=0.0.2",
    "discord>=2.3.2",
    "discord-py>=2.4.0",
    "gspread>=6.1.4",
    "jishaku>=2.6.0",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.8.4",
]


[tool.ruff.lint.pydocstyle]
# docstringをgoogle styleにする
convention = "google"

[dependency-groups]
dev = [
    "icecream>=2.1.4",
]
